Bug 824642 - PlanarYCbCrImage::GetAsSurface does not create surface optimized for platform. r=nsilva@mozilla.com